# backend

./: .env.example  .env.prod.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: claude-issue.yml  deploy.yml
alembic/: env.py
alembic/versions/: 261ebc5ee393_create_finance_schema.py
app/: database.py  main.py
app/api/v1/: models.py  router.py
app/api/v1/auth/: router.py  schema.py  service.py
app/api/v1/credit/: model.py  repository.py
app/api/v1/endpoints/: loan.py  user.py
app/api/v1/expense/: model.py
app/api/v1/fixed_expense/: model.py
app/api/v1/loan/: model.py  repository.py  router.py  schema.py  service.py
app/api/v1/simulation/: model.py  repository.py
app/api/v1/stock/: model.py
app/api/v1/user/: model.py  repository.py  router.py  schema.py  service.py
app/core/: config.py  exceptions.py  security.py
app/health/: router.py
docs/: deployment-roadmap.md  ec2-deploy.md
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
nginx/: nginx.conf
nginx/docker-entrypoint.d/: 99-render-default-conf.sh
scripts/: init-letsencrypt.sh  renew-letsencrypt.sh
tests/: test_error_responses.py
